[package]
name = "ICPP-crypto"
version = "2.0.3"
edition = "2021"
authors = ["Troesma"]
license = "BUSL-1.1"
description = "RDMPF/FE cryptography for privacy protocol on ICP"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
getrandom = { version = "0.2.16", features = ["custom"] }
num-traits = "0.2"
num-integer = "0.1"
lazy_static = "1.4"
miracl_core = "2.7.0"
rustc-hash = "1.1"

# Cryptographic 
# primitives
# -------------
sha3 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"

# Random number 
# generation
# -------------
rand = "0.8"
rand_chacha = "0.3"

# Constant-time 
# operations
# -------------
subtle = "2.5"

# Secure memory 
# zeroization
# -------------
zeroize = { version = "1.7", features = ["derive"] }

# Serialization (for 
# Candid integration)
# -------------------
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"

# Hex encoding 
# for commitments
# ---------------
hex = "0.4"

# Timestamps for 
# parameter generation
# --------------------
chrono = "0.4"

# IC CDK for 
# canister 
# development
# -----------
ic-cdk = "0.19"
ic-cdk-macros = "0.19"

[features]
debug-hints = []
test-utils = []

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3